--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "json-server": "^1.0.0-beta.3",
     "next": "15.3.4",
     "react": "^19.0.0",
